--- a/tech2/test-output/old/Default suite/methods-alphabetical.html
+++ b/tech2/test-output/old/Default suite/methods-alphabetical.html
@@ -1,2 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="986f76">  <td>25/10/08 17:46:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FbTest.login(org.testng.ITestContext)[pri:2, instance:listener.FbTest@49139829]">login</td> 
+  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="986f76">  <td>25/10/08 17:45:58</td>   <td>-2174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FbTest.titleCheck(org.testng.ITestContext)[pri:1, instance:listener.FbTest@49139829]">titleCheck</td> 
+  <td>main@1554547125</td>   <td></td> </tr>
 </table>
