--- a/tech2/test-output/old/Suite/classes.html
+++ b/tech2/test-output/old/Suite/classes.html
@@ -4,14 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>crossbrowser.MyTest</td>
+<td>listener.FbTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test</td>
+<td>login</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>titleCheck</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
