--- a/tech2/test-output/old/Suite/methods.html
+++ b/tech2/test-output/old/Suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b06cab">  <td>25/10/06 18:24:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTest.test(java.lang.String)[pri:0, instance:crossbrowser.MyTest@747ddf94]">test</td> 
+<tr bgcolor="c88a92">  <td>25/10/08 17:47:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FbTest.titleCheck(org.testng.ITestContext)[pri:1, instance:listener.FbTest@4efbca5a]">titleCheck</td> 
+  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="c88a92">  <td>25/10/08 17:47:46</td>   <td>2370</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FbTest.login(org.testng.ITestContext)[pri:2, instance:listener.FbTest@4efbca5a]">login</td> 
   <td>main@1554547125</td>   <td></td> </tr>
 </table>
